# Zephyr_App

./: CMakeLists.txt  Pandora开发板引脚配置.xlsx  README.md  STM32 PWM 定时器计算方法.md  Zephyr.code-profile  dts.template  pandora_sch.md  pandora_stm32l475.overlay  prj.conf  ~$Pandora开发板引脚配置.xlsx
drivers/: aht10_drv.c  ap3216c.c  ap3216c_drv.c  data_center.c  icm20608_drv.c  lcd_screen.c  ssd1306_drv.c  st7789v_drv.c
drivers/include/: aht10.h  ap3216c.h  data_center.h  icm20608.h  lcd_screen.h  st7789v.h
dts/bindings/display/: custom,sh1106.yaml  custom,st7789v.yaml
dts/bindings/sensor/: invensense,icm20608-i2c.yaml
include/: ap3216c.h  ap3216c_thread.h  display_thread.h
src/: aht10_thread.c  ap3216c_thread.c  display_thread.c  fs_thread.c  icm20608_thread.c  led_thread.c  main.c  norflash_thread.c  storage_thread.c  switch_thread.c
